Tests/a1/reject/28.ul
int main (int x) {
	print+3;
}